[gd_scene load_steps=5 format=3 uid="uid://vrhs1j4yoavp"]

[ext_resource type="Script" uid="uid://dt7coatljagvc" path="res://upgrade/upgrade.gd" id="1_mu7nb"]
[ext_resource type="Texture2D" uid="uid://dxrggmnnlf20k" path="res://assets/npr.png" id="1_ujuth"]
[ext_resource type="Theme" uid="uid://h22edabrcqwn" path="res://theme.tres" id="2_mu7nb"]
[ext_resource type="Texture2D" uid="uid://lnsxs2nj3eny" path="res://assets/rock_icon.png" id="3_64auc"]

[node name="upgrade" type="Button"]
z_index = 1870
custom_minimum_size = Vector2(0, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -53.0
offset_right = 141.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
flat = true
script = ExtResource("1_mu7nb")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -52.0
offset_right = 135.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ujuth")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -48.0
offset_right = -7.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_mu7nb")

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -31

[node name="icon" type="TextureRect" parent="NinePatchRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_stretch_ratio = 0.0
mouse_filter = 2
theme = ExtResource("2_mu7nb")
texture = ExtResource("3_64auc")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -13
alignment = 1

[node name="name" type="RichTextLabel" parent="NinePatchRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_mu7nb")
bbcode_enabled = true
text = "[outline_size=8][wave]Earth Level 2"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="upgrade_desc" type="Label" parent="NinePatchRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_mu7nb")
text = "+ 1 Ricj"
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
